// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should coorectly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    235
     
  </h1>
</div>
`;

exports[`should coorectly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    235255252552
     
  </h1>
</div>
`;
